--- a/src/sass/_colors.scss
+++ b/src/sass/_colors.scss
@@ -1,4 +1,4 @@
 $primary-color: #ff7757;
 $primary-color-light: #ffd2c7;
 $secondary-color: #331811;
-$secondary-color: #61291c;
+$secondary-color-light: #61291c;
