--- a/src/sass/_components.scss
+++ b/src/sass/_components.scss
@@ -3,11 +3,11 @@
 
 .header {
   &__title-introducction {
-    font-family: $Playfair;
-    color: $primary-color-titles;
+    font-family: fonts.$heading-font;
+    color: colors.$primary-color-titles;
   }
   &__subtitle-introducction {
-    font-family: $Rubik;
-    color: $secondary-color-text;
+    font-family: fonts.$text-font;
+    color: colors.$secondary-color-text;
   }
 }
