--- a/src/sass/_components.scss
+++ b/src/sass/_components.scss
@@ -2,11 +2,11 @@
 @use "fonts";
 
 .header {
-  &__title-introducction {
+  &__title-introduction {
     font-family: fonts.$heading-font;
     color: colors.$primary-color-titles;
   }
-  &__subtitle-introducction {
+  &__subtitle-introduction {
     font-family: fonts.$text-font;
     color: colors.$secondary-color-text;
   }
