--- a/src/sass/_components.scss
+++ b/src/sass/_components.scss
@@ -16,15 +16,19 @@
   &__title {
     font-family: fonts.$heading-font;
     color: colors.$primary-color-titles;
+    font-size: 40px;
 
     &::after {
       position: absolute;
       color: colors.$primary-color;
+      width: 227px;
+      height: 3px;
     }
   }
   &__text {
     font-family: fonts.$text-font;
     color: colors.$secondary-color-text;
+    font-size: 18px;
   }
   &__articles {
     font-family: fonts.$text-font;
