--- a/src/sass/_navigation.scss
+++ b/src/sass/_navigation.scss
@@ -3,7 +3,6 @@
 @use "colors.scss";
 
 .header-container {
-  background-color: black;
   position: relative;
 
   &__navigation {
@@ -11,6 +10,11 @@
     justify-content: space-between;
     align-items: center;
     padding: 1.5rem 1rem;
+  }
+
+  &__image {
+    width: 8.75rem;
+    height: 1.72006rem;
   }
 }
 
