--- a/src/sass/_components.scss
+++ b/src/sass/_components.scss
@@ -35,6 +35,14 @@
     font-family: fonts.$heading-font;
   }
   &__card {
-    border-radius: 16px;
+    &-monument {
+      border-color: red;
+      border-radius: 16px;
+      display: flex;
+      padding: 40px 20px;
+      flex-direction: column;
+      justify-content: flex-end;
+      align-items: flex-start;
+    }
   }
 }
