--- a/src/sass/_containers.scss
+++ b/src/sass/_containers.scss
@@ -1,5 +1,6 @@
 @use "globals";
 @use "fonts";
+@use "colors";
 
 .hero-section {
   display: flex;
@@ -31,4 +32,50 @@
 .header__subtitle-introduction {
   font-size: 1.125rem;
   color: rgb(255, 255, 255);
+}
+
+.content-block {
+  display: flex;
+  flex-direction: column;
+  gap: 3.75rem;
+  background-color: rgb(255, 255, 255);
+  border-radius: 2rem;
+  padding: 1.25rem;
+
+  &__buy-now {
+    display: flex;
+    flex-direction: column;
+    gap: 2.5rem;
+    color: colors.$secondary-color-text;
+    font-family: fonts.$text-font;
+    font-size: 0.875rem;
+    text-transform: uppercase;
+    width: 100%;
+  }
+}
+
+.buy-now {
+  &__col01 {
+    display: flex;
+    flex-direction: column;
+    gap: 0.75rem;
+    border-style: none;
+    padding: 0;
+    margin: 0;
+  }
+
+  &__col02 {
+    display: flex;
+    flex-direction: column;
+    gap: 0.75rem;
+    border-style: none;
+    padding: 0;
+    margin: 0;
+  }
+}
+
+input {
+  border-style: none;
+  border-bottom: 1px solid grey;
+  width: 100%;
 }
