--- a/src/sass/_components.scss
+++ b/src/sass/_components.scss
@@ -2,6 +2,7 @@
 @use "fonts";
 
 .header {
+  margin: 0;
   &__title-introduction {
     font-family: fonts.$heading-font;
     color: colors.$primary-color-titles;
@@ -13,6 +14,7 @@
 }
 
 .section {
+  margin: 0;
   &__title {
     font-family: fonts.$heading-font;
     color: colors.$primary-color-titles;
@@ -31,18 +33,21 @@
     font-size: 18px;
   }
   &__articles {
+    margin: 0;
     font-family: fonts.$text-font;
     font-family: fonts.$heading-font;
   }
   &__card {
+    width: 288px;
+    height: 320px;
     &-monument {
-      border-color: red;
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
       border-radius: 16px;
       display: flex;
-      padding: 40px 20px;
       flex-direction: column;
-      justify-content: flex-end;
-      align-items: flex-start;
+      justify-content: center;
     }
   }
 }
