--- a/src/sass/_containers.scss
+++ b/src/sass/_containers.scss
@@ -78,4 +78,7 @@ input {
   border-style: none;
   border-bottom: 1px solid grey;
   width: 100%;
+  padding: 0.62rem 0 0.62rem 0;
+  text-align: start;
+  font-family: fonts.$heading-font;
 }
