--- a/src/sass/_components.scss
+++ b/src/sass/_components.scss
@@ -16,6 +16,11 @@
 
 .section {
   margin: 0;
+
+  &.section--popular-destination {
+    padding: 5rem 1rem 6.25rem 1rem;
+  }
+
   &__title {
     font-family: fonts.$heading-font;
     color: colors.$primary-color-titles;
@@ -37,10 +42,12 @@
     margin: 0;
     font-family: fonts.$text-font;
     font-family: fonts.$heading-font;
+    padding: 6.25rem 0 6.25rem 0;
   }
   &__card {
     width: 288px;
     height: 320px;
+
     &-monument {
       width: 100%;
       height: 100%;
