--- a/src/sass/_navigation.scss
+++ b/src/sass/_navigation.scss
@@ -64,9 +64,13 @@
     gap: 2.25rem;
   }
 
-  a {
+  li > a {
     color: rgb(255, 255, 255);
     font-size: 1.25rem;
+  }
+
+  .navigation__responsive-login > a {
+    color: rgb(255, 255, 255);
   }
 
   svg {
