--- a/src/sass/_containers.scss
+++ b/src/sass/_containers.scss
@@ -40,7 +40,7 @@
   gap: 3.75rem;
   background-color: rgb(255, 255, 255);
   border-radius: 1rem;
-  padding: 1.25rem;
+  overflow: hidden;
 
   &__buy-now {
     display: flex;
@@ -59,6 +59,7 @@
     display: flex;
     flex-direction: column;
     gap: 2.5rem;
+    padding: 1.25rem;
   }
 }
 
