--- a/src/sass/_components.scss
+++ b/src/sass/_components.scss
@@ -15,18 +15,27 @@
 }
 
 .button {
-  background-color: colors.$primary-color;
-  padding: 2.5rem 1.25rem;
-  display: flex;
-  gap: 0.75;
-  justify-content: space-between;
-  align-items: center;
+  &buttons-solid {
+    background-color: colors.$primary-color;
+    &--signup {
+      background-color: colors.$primary-color;
+    }
+  }
 }
 
-.button > * {
-  font-size: 2.25rem;
-  color: rgb(255, 255, 255);
-}
+// .button {
+//   background-color: colors.$primary-color;
+//   padding: 2.5rem 1.25rem;
+//   display: flex;
+//   gap: 0.75;
+//   justify-content: space-between;
+//   align-items: center;
+// }
+
+// .button > * {
+//   font-size: 2.25rem;
+//   color: rgb(255, 255, 255);
+// }
 
 .section {
   margin: 0;
