--- a/src/sass/_colors.scss
+++ b/src/sass/_colors.scss
@@ -4,3 +4,4 @@ $secondary-color: #331811;
 $secondary-color-light: #61291c;
 $primary-color-titles: #172432;
 $secondary-color-text: #767e86;
+$primary-color-special-offer-cards: #fff8f1;
