--- a/src/sass/_components.scss
+++ b/src/sass/_components.scss
@@ -109,6 +109,7 @@
   &__card {
     width: auto;
     height: 320px;
+    margin: 32px 0;
   }
 }
 
@@ -150,5 +151,19 @@
     color: rgb(255, 255, 255);
     width: 24px;
     height: 24px;
+  }
+}
+
+@media (min-width: 800px) and (max-width: 1440px) {
+  .section {
+    &__card {
+      height: 661px;
+    }
+  }
+
+  .card-monument {
+    display: flex;
+    flex-direction: row;
+    position: relative;
   }
 }
