--- a/src/sass/_containers.scss
+++ b/src/sass/_containers.scss
@@ -96,6 +96,10 @@ input {
   flex-direction: column;
   gap: 60px;
 
+  &__image-container {
+    width: 100%;
+  }
+
   &__text-block {
     display: flex;
     flex-direction: column;
@@ -104,6 +108,12 @@ input {
     background-color: colors.$primary-color-special-offer-cards;
     border-radius: 0 0 26px 26px;
     margin-top: -64px;
+  }
+}
+
+.image-container {
+  &__image {
+    width: 100%;
   }
 }
 
