--- a/src/sass/_components.scss
+++ b/src/sass/_components.scss
@@ -25,7 +25,6 @@
 }
 
 .icon-button-wrapper{
-  padding: 5rem 0;
   display: flex;
   justify-content: center;
   align-items: flex-start;
@@ -87,6 +86,8 @@
     padding: 6.25rem 0 6.25rem 0;
     display: flex;
     justify-content: center;
+    flex-direction: column;
+    gap: 100px;
   }
 
   &__item {
@@ -96,7 +97,6 @@
   &__card {
     width: auto;
     height: 320px;
-    margin: 32px 0;
   }
 
   &.section-special-offer {
