--- a/src/sass/_components.scss
+++ b/src/sass/_components.scss
@@ -15,12 +15,30 @@
 }
 
 .button {
-  &buttons-solid {
+  &__button-buynow {
     background-color: colors.$primary-color;
-    &--signup {
-      background-color: colors.$primary-color;
-    }
+    padding: 40px 20px;
+    display: flex;
+    gap: 12px;
+    justify-content: space-between;
+    align-items: center;
   }
+
+  &__button--solid {
+    background-color: colors.$primary-color;
+    display: flex;
+    padding: 20px 32px;
+    justify-content: center;
+    align-items: center;
+    border-radius: 12px;
+    font-size: 1.25rem;
+    color: #ffffff;
+  }
+}
+
+.button > * {
+  font-size: 2.25rem;
+  color: #ffffff;
 }
 
 .icon-button-wrapper {
@@ -157,5 +175,12 @@
     display: flex;
     flex-direction: row;
     position: relative;
+  }
+
+  .button {
+    &__button-buynow {
+      font-family: fonts.$heading-font;
+      font-size: 2.25rem;
+    }
   }
 }
