Update the blog section in mobile

--- a/src/sass/_components.scss
+++ b/src/sass/_components.scss
@@ -122,6 +122,14 @@
       gap: 32px;
     }
   }
+
+  &.section-blog {
+    padding: 80px 16px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    gap: 100px;
+  }
 }
 
 .card-monument {
