--- a/src/sass/_containers.scss
+++ b/src/sass/_containers.scss
@@ -219,6 +219,7 @@ input {
   .content-block {
     flex-direction: row;
     width: 80%;
+    align-items: center;
   }
 
   .column {
@@ -243,5 +244,21 @@ input {
 
   .section-special-offer__image-container {
     display: none;
+  }
+
+  .content {
+    display: flex;
+    flex-direction: row;
+    &__image-container {
+      width: 2400px;
+    }
+  }
+
+  .text-block {
+    display: flex;
+    flex-direction: column;
+    &__heading {
+      font-size: 2.25rem;
+    }
   }
 }
