--- a/src/sass/_containers.scss
+++ b/src/sass/_containers.scss
@@ -226,6 +226,13 @@ input {
     &__frame01 {
       display: flex;
       flex-direction: row;
+      padding: 0;
+    }
+  }
+
+  .frame01 {
+    &__col01 {
+      gap: 0;
     }
   }
 
@@ -234,6 +241,7 @@ input {
       display: flex;
       flex-direction: row;
       gap: 2.5rem;
+      padding-left: 32px;
     }
   }
 
